# api-document/resources/docs/swagger.json
@@ -194,7 +194,7 @@
                         "name": "request",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/transport.Request-handlers_AddCommentRequest"
+                            "$ref": "#/definitions/transport.Request-github_com_kingstonduy_api-document_domain_comment_AddCommentRequest"
                         }
                     }
                 ],
@@ -202,7 +202,7 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/transport.Response-handlers_AddCommentResponse"
+                            "$ref": "#/definitions/transport.Response-github_com_kingstonduy_api-document_domain_comment_AddCommentResponse"
                         }
                     }
                 }
@@ -220,15 +220,15 @@
                 "tags": [
                     "COMMENT SERVICE"
                 ],
-                "summary": "GetCommentsByProductID",
-                "operationId": "GetCommentsByProductID",
+                "summary": "GetComment",
+                "operationId": "GetComment",
                 "parameters": [
                     {
                         "description": "Request",
                         "name": "request",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/transport.Request-handlers_GetCommentsByProductIDRequest"
+                            "$ref": "#/definitions/transport.Request-github_com_kingstonduy_api-document_domain_comment_GetCommentRequest"
                         }
                     }
                 ],
@@ -236,7 +236,7 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/transport.Response-handlers_GetCommentsByProductIDResponse"
+                            "$ref": "#/definitions/transport.Response-github_com_kingstonduy_api-document_domain_comment_GetCommentResponse"
                         }
                     }
                 }
@@ -659,6 +659,45 @@
         "github_com_kingstonduy_api-document_domain_cart.UpdateCartItemResponse": {
             "type": "object"
         },
+        "github_com_kingstonduy_api-document_domain_comment.AddCommentRequest": {
+            "type": "object",
+            "required": [
+                "content",
+                "productId",
+                "rating",
+                "userId"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "productId": {
+                    "type": "string"
+                },
+                "rating": {
+                    "type": "integer",
+                    "enum": [
+                        1,
+                        2,
+                        3,
+                        4,
+                        5
+                    ]
+                },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_kingstonduy_api-document_domain_comment.AddCommentResponse": {
+            "type": "object"
+        },
+        "github_com_kingstonduy_api-document_domain_comment.GetCommentRequest": {
+            "type": "object"
+        },
+        "github_com_kingstonduy_api-document_domain_comment.GetCommentResponse": {
+            "type": "object"
+        },
         "github_com_kingstonduy_api-document_domain_product.GetAllProductRequest": {
             "type": "object"
         },
@@ -884,26 +923,6 @@
         "github_com_kingstonduy_api-document_domain_user.UpdateUserInformationResponse": {
             "type": "object"
         },
-        "handlers.AddCommentRequest": {
-            "type": "object",
-            "properties": {
-                "content": {
-                    "type": "string"
-                },
-                "productId": {
-                    "type": "string"
-                },
-                "rating": {
-                    "type": "number"
-                },
-                "userId": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.AddCommentResponse": {
-            "type": "object"
-        },
         "handlers.CheckoutDetail": {
             "type": "object",
             "properties": {
@@ -931,26 +950,6 @@
         },
         "handlers.CheckoutResponse": {
             "type": "object"
-        },
-        "handlers.Comment": {
-            "type": "object",
-            "properties": {
-                "content": {
-                    "type": "string"
-                },
-                "rating": {
-                    "type": "number"
-                },
-                "timestamp": {
-                    "type": "string"
-                },
-                "userImage": {
-                    "type": "string"
-                },
-                "userName": {
-                    "type": "string"
-                }
-            }
         },
         "handlers.GetCheckoutItemDetail": {
             "type": "object",
@@ -990,25 +989,6 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/handlers.GetCheckoutItemDetail"
-                    }
-                }
-            }
-        },
-        "handlers.GetCommentsByProductIDRequest": {
-            "type": "object",
-            "properties": {
-                "productId": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.GetCommentsByProductIDResponse": {
-            "type": "object",
-            "properties": {
-                "comments": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/handlers.Comment"
                     }
                 }
             }
@@ -1125,6 +1105,34 @@
                 }
             }
         },
+        "transport.Request-github_com_kingstonduy_api-document_domain_comment_AddCommentRequest": {
+            "type": "object",
+            "required": [
+                "trace"
+            ],
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/github_com_kingstonduy_api-document_domain_comment.AddCommentRequest"
+                },
+                "trace": {
+                    "$ref": "#/definitions/transport.Trace"
+                }
+            }
+        },
+        "transport.Request-github_com_kingstonduy_api-document_domain_comment_GetCommentRequest": {
+            "type": "object",
+            "required": [
+                "trace"
+            ],
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/github_com_kingstonduy_api-document_domain_comment.GetCommentRequest"
+                },
+                "trace": {
+                    "$ref": "#/definitions/transport.Trace"
+                }
+            }
+        },
         "transport.Request-github_com_kingstonduy_api-document_domain_product_GetAllProductRequest": {
             "type": "object",
             "required": [
@@ -1209,20 +1217,6 @@
                 }
             }
         },
-        "transport.Request-handlers_AddCommentRequest": {
-            "type": "object",
-            "required": [
-                "trace"
-            ],
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/handlers.AddCommentRequest"
-                },
-                "trace": {
-                    "$ref": "#/definitions/transport.Trace"
-                }
-            }
-        },
         "transport.Request-handlers_CheckoutRequest": {
             "type": "object",
             "required": [
@@ -1245,20 +1239,6 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/handlers.GetCheckoutItemRequest"
-                },
-                "trace": {
-                    "$ref": "#/definitions/transport.Trace"
-                }
-            }
-        },
-        "transport.Request-handlers_GetCommentsByProductIDRequest": {
-            "type": "object",
-            "required": [
-                "trace"
-            ],
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/handlers.GetCommentsByProductIDRequest"
                 },
                 "trace": {
                     "$ref": "#/definitions/transport.Trace"
@@ -1340,6 +1320,34 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/github_com_kingstonduy_api-document_domain_cart.UpdateCartItemResponse"
+                },
+                "result": {
+                    "$ref": "#/definitions/transport.Result"
+                },
+                "trace": {
+                    "$ref": "#/definitions/transport.Trace"
+                }
+            }
+        },
+        "transport.Response-github_com_kingstonduy_api-document_domain_comment_AddCommentResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/github_com_kingstonduy_api-document_domain_comment.AddCommentResponse"
+                },
+                "result": {
+                    "$ref": "#/definitions/transport.Result"
+                },
+                "trace": {
+                    "$ref": "#/definitions/transport.Trace"
+                }
+            }
+        },
+        "transport.Response-github_com_kingstonduy_api-document_domain_comment_GetCommentResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/github_com_kingstonduy_api-document_domain_comment.GetCommentResponse"
                 },
                 "result": {
                     "$ref": "#/definitions/transport.Result"
@@ -1433,20 +1441,6 @@
                 }
             }
         },
-        "transport.Response-handlers_AddCommentResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/handlers.AddCommentResponse"
-                },
-                "result": {
-                    "$ref": "#/definitions/transport.Result"
-                },
-                "trace": {
-                    "$ref": "#/definitions/transport.Trace"
-                }
-            }
-        },
         "transport.Response-handlers_CheckoutResponse": {
             "type": "object",
             "properties": {
@@ -1466,20 +1460,6 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/handlers.GetCheckoutItemResponse"
-                },
-                "result": {
-                    "$ref": "#/definitions/transport.Result"
-                },
-                "trace": {
-                    "$ref": "#/definitions/transport.Trace"
-                }
-            }
-        },
-        "transport.Response-handlers_GetCommentsByProductIDResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/handlers.GetCommentsByProductIDResponse"
                 },
                 "result": {
                     "$ref": "#/definitions/transport.Result"
